Fix Login z-index

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -21,6 +21,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  z-index: 250;
 }
 
 .login__form {
